--- a/views/laundry/dashboard.hbs
+++ b/views/laundry/dashboard.hbs
@@ -2,8 +2,8 @@
 <h2> Your laundry Dashboard </h2>
 
 <ul>
-  <li> <a href="/launderers"> Find a Launderer </a> </li>
-  <li> <a href="/logout"> Log Out </a> </li>
+  <li> <a href="/laundry/launderers"> Find a Launderer </a> </li>
+  <li> <a href="/auth/logout"> Log Out </a> </li>
 </ul>
 
 {{#if currentUserInfo.isLaunderer}}
@@ -16,7 +16,7 @@
 {{else}}
   <h3> Want to become a launderer? </h3>
 
-  <form action="/launderers" method="post">
+  <form action="/laundry/launderers" method="post">
     <div>
       <label for="fee-input"> Set your fee </label>
       <input type="number" name="fee" id="fee-input">
